update layouts